--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://Ali3905.github.io/e-shopper",
+    "homepage": "https://Ali3905.github.io/mern-ecommerce-app",
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
